# c99cmaketemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt  functions.c  functions.h
src/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  tests_functions.c  tests_functions.h
